--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -375,12 +375,12 @@
         </ion-row>
 
         <!-- IVA  -->
-        <ion-row>
+        <!-- <ion-row>
           <ion-col></ion-col>
           <ion-col><b></b></ion-col>
           <ion-col>IVA</ion-col>
           <ion-col>{{ iva | currency }}</ion-col>
-        </ion-row>
+        </ion-row> -->
 
         <!-- PROPINA -->
         <ion-row>
