--- a/src/pages/corte-venta/corte-venta.html
+++ b/src/pages/corte-venta/corte-venta.html
@@ -77,11 +77,11 @@
                     <ion-badge class="negro" item-end> {{ comision | currency }}</ion-badge>
                 </ion-item>
 
-                <ion-item class="card_atras">
+                <!-- <ion-item class="card_atras">
                     <a class="blanco_2">IVA</a>
                     <h4 class="blanco_1"></h4>
                     <ion-badge class="negro" item-end> {{ iva | currency }} </ion-badge>
-                </ion-item>
+                </ion-item> -->
 
                 <ion-item class="card_atras">
                     <a class="blanco_2">Propinas</a>
