--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -290,17 +290,17 @@
         <ion-row>
           <ion-col></ion-col>
           <ion-col><b></b></ion-col>
-          <ion-col>Comision 5.9</ion-col>
-          <ion-col>{{ comision | currency}}</ion-col>
+          <ion-col>Comision</ion-col>
+          <ion-col>{{ comisionMasIva | currency}}</ion-col>
         </ion-row>
 
         <!-- IVA -->
-        <ion-row>
+        <!-- <ion-row>
           <ion-col></ion-col>
           <ion-col><b></b></ion-col>
           <ion-col>IVA</ion-col>
           <ion-col>{{ iva | currency}}</ion-col>
-        </ion-row>
+        </ion-row> -->
 
         <!-- PROPINA -->
         <ion-row>
