--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -181,6 +181,20 @@
                 </ion-badge>
             </ion-item>
 
+            <ion-item (click)="goReservacionesGrals()">
+                <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="./assets/content/icono3.png">
+
+                </ion-avatar>
+
+                Ver reservaciones
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
+                </ion-badge>
+            </ion-item>
+
         </div>
 
         <div
