--- a/src/pages/corte-detalle-reservacion/corte-detalle-reservacion.html
+++ b/src/pages/corte-detalle-reservacion/corte-detalle-reservacion.html
@@ -55,11 +55,11 @@
         <ion-badge class="negro" item-end> {{ corte?.comision | currency }}</ion-badge>
       </ion-item>
 
-      <ion-item class="card_atras">
+      <!-- <ion-item class="card_atras">
         <a class="blanco_2">IVA</a>
         <h4 class="blanco_1"></h4>
         <ion-badge class="negro" item-end> {{ corte?.iva | currency }} </ion-badge>
-      </ion-item>
+      </ion-item> -->
 
       <ion-item class="card_atras">
         <a class="blanco_2">Propinas</a>
