--- a/src/pages/admin-evento-subir/admin-evento-subir.html
+++ b/src/pages/admin-evento-subir/admin-evento-subir.html
@@ -133,7 +133,8 @@
         <ion-row>
             <ion-col></ion-col>
             <ion-col>
-                <button class="btnimgs" ion-button [disabled]="titulo.length <= 1 || imagenPreview.length <= 1" (click)="crear_post(ciudadSucursal)">
+                <!-- [disabled]="titulo.length <= 1 || imagenPreview.length <= 1" -->
+                <button class="btnimgs" ion-button (click)="crear_post(ciudadSucursal)">
                     Crear post
                 </button>
             </ion-col>
